--- a/styles/base.less
+++ b/styles/base.less
@@ -15,7 +15,8 @@ body {
 }
 
 a {
-  color: @linkColor;
+  /* color: @linkColor; */
+  color: purple;
 }
 
 .container {
@@ -40,10 +41,10 @@ a {
 
 }
 
-  .main-navigation-list {  
+  .main-navigation-list {
     padding-left: 0;
   }
-    
+
     .main-navigation-item {
       display: inline-block;
 
